tests/NormalTests/paczka1/fuzzy1/81075376.err
Error in line 8: 4F62B1FtX A97 9,5
Error in line 16: JF62B1FtX A7J7 9J,J
Error in line 14: 4F62B1FtX S894 94,8
Error in line 22: A747 A97 145,4
Error in line 23: 4F62B1FtX A747 20,9
Error in line 30: GmQb A97 14,9
